# mythos

./: .gitignore  CREATE_REPO.bat  INSTALL.md  MANIFEST.in  Mythos.cmd  README.md  SETUP_MANUAL.bat  SKILLS_APPLICATION_REPORT.md  auto_update.py  clean_history.bat  config.json  create_icon.bat  create_icon.py  create_repo.ps1  create_shortcuts.bat  create_shortcuts.py  install.py  install_autostart.py  install_global.py  mythos.py  mythos_boot.py  mythos_lock.cmd  pyproject.toml  requirements.txt  setup.cfg  setup.py  setup_github.bat  test_all.py  test_mythos.py
.mimocode/: README.md
.mimocode/hooks/: auto-continue.ts  auto-logger.ts  auto-task-chain.ts  enforce-autonomy.ts  error-recovery.ts  memory-learner.ts  smart-continuation.ts
.mimocode/skills/: README.md
.mimocode/skills/autonomous/: SKILL.md
.mimocode/skills/autonomous-operation/: SKILL.md
.mimocode/skills/continuous-work/: SKILL.md
.mimocode/skills/docx/: SKILL.md
.mimocode/skills/error-recovery/: SKILL.md
.mimocode/skills/feed/: SKILL.md
.mimocode/skills/frontend-design/: SKILL.md
.mimocode/skills/grill-me/: SKILL.md
.mimocode/skills/handoff/: SKILL.md
.mimocode/skills/improve-codebase-architecture/: SKILL.md
.mimocode/skills/obsidian/: SKILL.md
.mimocode/skills/obsidian-memory/: SKILL.md
.mimocode/skills/obsidian-sync/: SKILL.md
.mimocode/skills/pdf/: SKILL.md
.mimocode/skills/skill-creator/: SKILL.md
.mimocode/skills/smart-ai/: SKILL.md
.mimocode/skills/tdd/: SKILL.md
.mimocode/tools/: autonomous-tracker.ts  workflow-state.ts
.mythos_launchers/: mythos_cli.vbs  mythos_desktop.vbs
Claude Mythos Desktop/app/: .backend-features.json  .env.example  drizzle.config.ts  index.html  package.json
Mythos Desktop/: package.json
Mythos Desktop/electron/: config.js  main.js  memory.js  preload.cjs
core/: __init__.py  agent.py  ai_brain.py  api_client.py  commands.py  config.py  executor.py  feed.py  goal_tracker.py  guardian.py  key_manager.py  lock_screen.py  memory.py  mimo_api.py  obsidian.py  obsidian_sync.py  quantum.py  quantum_tools.py  self_reflect.py  smart_ai.py  tools.py  ui.py  vision.py
mythos/: __init__.py
tests/: test_all_tools.py  test_tdd_agent.py
whatsapp/: README.md  package.json  wrangler.toml
whatsapp/src/: index.js
(+28 files in other folders)
