[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "mythos-ai"
version = "1.0.0"
description = "Mythos AI - Autonomous Agent with CLI and Desktop Interface"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Mythos AI Team"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "requests>=2.28.0",
    "rich>=13.0.0",
    "colorama>=0.4.6",
    "prompt_toolkit>=3.0.0",
    "fpdf2>=2.7.0",
    "pypdf>=3.0.0",
]

[project.scripts]
mythos = "mythos:main"

[project.urls]
Homepage = "https://github.com/centralai627-ux/mythos"
Repository = "https://github.com/centralai627-ux/mythos"
Issues = "https://github.com/centralai627-ux/mythos/issues"

[tool.setuptools.packages.find]
include = ["core*"]
