[metadata]
name = mythos-ai
version = 1.0.0
author = Mythos AI Team
description = Mythos AI - Autonomous Agent with CLI and Desktop Interface
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/centralai627-ux/mythos
project_urls =
    Bug Tracker = https://github.com/centralai627-ux/mythos/issues
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: Microsoft :: Windows
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12

[options]
packages = find:
python_requires = >=3.9
install_requires =
    requests>=2.28.0
    rich>=13.0.0
    colorama>=0.4.6
    prompt_toolkit>=3.0.0
    fpdf2>=2.7.0
    pypdf>=3.0.0

[options.packages.find]
include = core*

[options.entry_points]
console_scripts =
    mythos = mythos:main
